vbnc/vbnc/tests/Errors/30337-2.vb
Module bug
    Sub Main()
        For i As Char = 1 To 2

        Next
    End Sub
End Module